# dogfight-rs

./: Cargo.toml
resources/: display_config.ron  input_config.ron
src/: bit.rs  bundle.rs  dogfight.rs  exit_system.rs  explosion.rs  game_info.rs  level.rs  main.rs  plane.rs  shot.rs
src/systems/: mod.rs  plane.rs
